# Legate.jl

./: .gitignore  LocalPreferences.toml  Project.toml  README.md  build.sh  clean_test.txt  legate_0.prof  test.jl  test_comparison.jl  test_crash.sh
.github/workflows/: ci.yml  developer.yml  docs.yml
dev/: 404.html  api.html  example.html  hashmap.json  index.html  install.html  objects.inv  usage.html
dev/CppAPI/: annotated_dup.js  classufi_1_1JuliaCustomTask.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_c1a3c38c26986916414f7ebddc69cc0a.html  dir_ef3f76d3bc012562c37eadb6f3a4250f.html  dir_ef3f76d3bc012562c37eadb6f3a4250f.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  module_8cpp.html  module_8cpp.js  namespacelegate__wrapper.js  namespacelegate__wrapper_1_1tasking.html  namespacelegate__wrapper_1_1time.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  structWrapDefault-members.html  structWrapDefault.html  structlegate__wrapper_1_1data_1_1GetPtrFunctor-members.html  types_8cpp.html  types_8h.html  types_8h_source.html  wrapper_8inl.html  wrapper_8inl.js  wrapper_8inl_source.html
dev/assets/: api.md.CdQNmpy-.js  api.md.CdQNmpy-.lean.js  api.md.CgJOKzWk.js  api.md.CgJOKzWk.lean.js  api.md.CmcaOxDL.js  api.md.CmcaOxDL.lean.js  api.md.DB_18Pl_.js  api.md.DB_18Pl_.lean.js  api.md.DYSovwSW.js  api.md.DYSovwSW.lean.js  api.md.JILxYlTf.js  api.md.JILxYlTf.lean.js  api.md.UN486Ikl.js  api.md.UN486Ikl.lean.js  api.md.rjRSx95e.js  api.md.rjRSx95e.lean.js  api.md.xuuZ4E-r.js  api.md.xuuZ4E-r.lean.js  app.BV0XKY8Y.js  app.BaGh7pUx.js  app.CEL4Dq_o.js  app.CYbFOjvz.js  app.CcLmmBK7.js  app.CvZAJQc6.js  app.eftc5ZJa.js  example.md.CGxE8Ycm.js  example.md.CGxE8Ycm.lean.js  example.md.DYIQQaV9.js  example.md.DYIQQaV9.lean.js  example.md.DfcDB9AS.js  example.md.DfcDB9AS.lean.js  example.md.DtTvTW9b.js  index.md.B7K3tOyb.js  index.md.B7K3tOyb.lean.js  index.md.BVGexq-E.js  index.md.BVGexq-E.lean.js  index.md.C6OYBiMI.js  index.md.C6OYBiMI.lean.js  index.md.CRpxAJmi.js  index.md.CRpxAJmi.lean.js  (+19 more)
docs/: Doxyfile  Project.toml  make.jl
docs/src/: api.md  dev.md  example.md  install.md  random.md  usage.md
examples/: example.jl  minimal_task.jl  tasking.jl
ext/CUDAExt/: CUDAExt.jl  ufi.jl
lib/LegatePreferences/: Project.toml
lib/legate_jl_wrapper/: CMakeLists.txt
lib/legate_jl_wrapper/include/: task.h  types.h  wrapper.inl
lib/legate_jl_wrapper/src/: module.cpp  task.cpp  types.cpp  wrapper.cpp
previews/PR55/: 404.html  api.html  dev.html  errors.html  hashmap.json  index.html  install.html  objects.inv  random.html  usage.html
previews/PR59/: 404.html  api.html  hashmap.json  index.html  install.html  usage.html
scripts/: build.sh  build_cpp_wrapper.sh  install_cxxwrap.sh  legion_redop_patch.inl  patch_legion.sh
src/: Legate.jl  api.jl  depends.jl  docs.jl  gpu.jl  preference.jl  type.jl  type_map.jl  ufi.jl  util.jl
src/api/: data.jl  (+3 more)
stable/: 404.html  api.html  example.html  hashmap.json  index.html  install.html  objects.inv  usage.html
test/: Project.toml  runtests.jl
v0.1/: 404.html  api.html  example.html  hashmap.json  index.html  install.html  usage.html
wrapper/: CMakeLists.txt
wrapper/include/: types.h
wrapper/src/: types.cpp  wrapper.cpp
(+971 files in other folders)
